--- a/pkg/helm/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets-no-legacy.test.yaml
+++ b/pkg/helm/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets-no-legacy.test.yaml
@@ -1,7 +1,5 @@
 # This file tests image pull secret references
-# WITH pre-existing secrets.
-# TODO(ROX-21430): rename this file to image-pull-secrets-legacy.test.yaml
-# Keeping the name for now to make review easier.
+# WITHOUT pre-existing secrets.
 defs: |
   def authForCollector:
     (container(.daemonsets.collector; "collector") | .image | sub("/.*$"; "")) as $collectorRegistry |
@@ -15,49 +13,16 @@ defs: |
           | .["https://" + (if ($mainRegistry == "docker.io") then "index.docker.io/v1/" else $mainRegistry end)]
           | .auth | @base64d;
 
-objects:
-- apiVersion: v1
-  kind: Secret
-  metadata:
-    name: stackrox
-    namespace: stackrox
-- apiVersion: v1
-  kind: Secret
-  metadata:
-    name: stackrox-scanner
-    namespace: stackrox
-- apiVersion: v1
-  kind: Secret
-  metadata:
-    name: collector-stackrox
-    namespace: stackrox
-- apiVersion: v1
-  kind: Secret
-  metadata:
-    name: secured-cluster-services-main
-    namespace: stackrox
-- apiVersion: v1
-  kind: Secret
-  metadata:
-    name: secured-cluster-services-collector
-    namespace: stackrox
-
 expect: |
-  # Ensure that default/legacy service accounts are always referenced in the correct fashion in the non-error case
+  # Ensure that default/legacy legacy image pull secrets are not referenced when they do not exist.
 
-  assumeThat(.error == null) | .serviceaccounts["collector"] | saRefersTo(["stackrox", "collector-stackrox"])
-  assumeThat(.error == null) | .serviceaccounts["sensor"] | saRefersTo(["stackrox"])
-  assumeThat(.error == null) | .serviceaccounts["sensor"] | saNotRefersTo(["collector-stackrox"])
-  assumeThat(.error == null) | .serviceaccounts["admission-control"] | saRefersTo(["stackrox"])
-  assumeThat(.error == null) | .serviceaccounts["admission-control"] | saNotRefersTo(["collector-stackrox"])
+  assumeThat(.error == null) | .serviceaccounts["collector"] | saNotRefersTo(["stackrox", "stackrox-scanner", "collector-stackrox"])
+  assumeThat(.error == null) | .serviceaccounts["sensor"] | saNotRefersTo(["stackrox", "stackrox-scanner", "collector-stackrox"])
+  assumeThat(.error == null) | .serviceaccounts["admission-control"] | saNotRefersTo(["stackrox", "stackrox-scanner", "collector-stackrox"])
 
-  # Ensure that newly created secrets are always referenced in the correct fashion in the non-error case.
+  # Ensure that sensor and admission-control secrets do not reference the collector secrets in the non-error case.
 
-  assumeThat(.error == null) | .serviceaccounts["collector"]
-    | saRefersTo(["secured-cluster-services-main", "secured-cluster-services-collector"])
-  assumeThat(.error == null) | .serviceaccounts["sensor"] | saRefersTo(["secured-cluster-services-main"])
   assumeThat(.error == null) | .serviceaccounts["sensor"] | saNotRefersTo(["secured-cluster-services-collector", "collector-stackrox"])
-  assumeThat(.error == null) | .serviceaccounts["admission-control"] | saRefersTo(["secured-cluster-services-main"])
   assumeThat(.error == null) | .serviceaccounts["admission-control"] | saNotRefersTo(["secured-cluster-services-collector", "collector-stackrox"])
 
 tests:
@@ -65,6 +30,10 @@ tests:
   expect: |
     .secrets?["secured-cluster-services-main"]? | assertThat(. == null)
     .secrets?["secured-cluster-services-collector"]? | assertThat(. == null)
+    assumeThat(.error == null) | .serviceaccounts["collector"]
+      | saNotRefersTo(["secured-cluster-services-main", "secured-cluster-services-collector"])
+    assumeThat(.error == null) | .serviceaccounts["sensor"] | saNotRefersTo(["secured-cluster-services-main"])
+    assumeThat(.error == null) | .serviceaccounts["admission-control"] | saNotRefersTo(["secured-cluster-services-main"])
   tests:
   - name: "works with allowNone=true"
     set:
